--- a/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
+++ b/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
@@ -50,4 +50,9 @@
       margin-left: -5%;
     }
   }
+
+  > *,
+  figure > * {
+    width: 100%;
+  }
 }
